--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -35,6 +35,8 @@
 .task-buttons {
   display: flex;
   gap: 10px;
-  justify-content: flex-end; /* Aligne bien les boutons */
-  min-width: 150px; /* Fixe une largeur pour que tous les boutons restent alignés */
+  justify-content: flex-end; 
+  min-width: 150px; 
+  border: 1px solid gray;
 }
+
